--- a/14_thirdparty_libs/package.json
+++ b/14_thirdparty_libs/package.json
@@ -9,6 +9,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.7"
   }
 }
