using webpack dev server

--- a/16_webpack_ts/package.json
+++ b/16_webpack_ts/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "lite-server",
+    "start": "webpack serve",
     "build": "webpack"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
