--- a/16_webpack_ts/package.json
+++ b/16_webpack_ts/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve",
-    "build": "webpack"
+    "build": "webpack",
+    "build:prod": "webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
