--- a/16_webpack_ts/package.json
+++ b/16_webpack_ts/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
+    "clean-webpack-plugin": "^4.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
     "webpack": "^5.93.0",
