--- a/15_modules/package.json
+++ b/15_modules/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsc"
   },
   "type": "module",
   "keywords": [],
